--- a/.config
+++ b/.config
@@ -126,3 +126,4 @@ CONFIG_PACKAGE_wget-nossl=y
 CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=300
 # CONFIG_VMDK_IMAGES is not set
+CONFIG_PACKAGE_nlbwmon=n
